--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-cayman
-title: [Voldy87 website]
-description: [Stuff]
-google_analytics: [UA-111922882-1]
+title: Voldy87 website
+description: Misc stuff
+google_analytics: UA-111922882-1
+author: Andrea Orlandi
