--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,5 @@ title: Voldy87 website
 description: Misc stuff
 google_analytics: UA-111922882-1
 author: Andrea Orlandi
+email: ing.orlandi.andrea@gmail.com
 github: [metadata]
