--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,4 @@ google_analytics: UA-111922882-1
 author: Andrea Orlandi
 email: ing.orlandi.andrea@gmail.com
 github: [metadata]
+project_url: https://projects.voldy87.tk
