--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
 title: Voldy87 website
-description: Misc stuff
+description: Projects, Apps, and many more..
 google_analytics: UA-111922882-1
 author: Andrea Orlandi
 email: ing.orlandi.andrea@gmail.com
